movie_page: fix horizontal scroll

--- a/static/css/movie_page.css
+++ b/static/css/movie_page.css
@@ -15,6 +15,7 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: var(--bg-color);
+    overflow-x: hidden;
 }
 
 .movie-bg {
